# notion2prompt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python.yml  release.yml
benches/: api_bench.rs  formatting_bench.rs
crates/notion2prompt-python/: Cargo.toml
crates/notion2prompt-python/src/: lib.rs  pipeline.rs  types.rs
python/notion2prompt/: __init__.py  __init__.pyi  cli.py
src/: config.rs  constants.rs  error.rs  error_recovery.rs  lib.rs  main.rs  pipeline.rs
src/algebras/: content.rs  error.rs  mod.rs  state.rs
src/analytics/: mod.rs
src/api/: cache.rs  client.rs  concurrent_queue.rs  connection_pool.rs  fetch_queue.rs  mod.rs  notion_client_adapter.rs  object_graph.rs  parallel_fetcher.rs  parser.rs  responses.rs  simple_pagination.rs  types.rs
src/formatting/: block_renderer.rs  direct_template.rs  mod.rs  pure_visitor.rs  state.rs  tests_child_database.rs
src/model/: block.rs  blocks.rs  common.rs  mod.rs  properties.rs  property_value.rs
src/output/: clipboard.rs  mod.rs  paths.rs  types.rs  writer.rs
src/types/: collections.rs  colors.rs  compat.rs  domain_types.rs  ids.rs  mod.rs  properties.rs
templates/: claude-xml.hbs
tests/: golden_master_regression.rs  mod.rs  performance_benchmarks.rs  snapshot_tests.rs  test_bookmark_formatting.rs  test_new_block_formatting.rs  test_property_parsing_fallbacks.rs  verify_cycle_fix.rs
tests/integration/: child_database_fetching.rs  child_database_priority.rs  debug_child_database_trace.rs  end_to_end_child_database_test.rs  formatting_pipeline.rs  mod.rs  simple_fixture_test.rs  test_block_parents.rs  test_child_database_inclusion.rs  test_key_highlights_embedding.rs
tests/snapshots/: end_to_end_child_database_output.md  snapshot_tests__blocks__bookmark_block.snap  snapshot_tests__blocks__bookmark_block_with_caption.snap  snapshot_tests__blocks__breadcrumb_block.snap  snapshot_tests__blocks__bulleted_list_item.snap  snapshot_tests__blocks__callout_block.snap  snapshot_tests__blocks__child_database_block.snap  snapshot_tests__blocks__child_page_block.snap  snapshot_tests__blocks__code_python.snap  snapshot_tests__blocks__code_rust.snap  snapshot_tests__blocks__column_list_block.snap  snapshot_tests__blocks__divider_block.snap  snapshot_tests__blocks__embed_block.snap  snapshot_tests__blocks__equation_block.snap  snapshot_tests__blocks__file_block_test.snap  snapshot_tests__blocks__heading1_block.snap  snapshot_tests__blocks__heading2_block.snap  snapshot_tests__blocks__heading3_block.snap  snapshot_tests__blocks__image_external_block.snap  snapshot_tests__blocks__image_with_caption_block.snap  snapshot_tests__blocks__link_preview_block.snap  snapshot_tests__blocks__link_to_page_block.snap  snapshot_tests__blocks__numbered_list_item.snap  snapshot_tests__blocks__paragraph_block.snap  snapshot_tests__blocks__paragraph_empty.snap  snapshot_tests__blocks__pdf_block.snap  snapshot_tests__blocks__quote_block.snap  snapshot_tests__blocks__synced_block.snap  snapshot_tests__blocks__synced_reference_block.snap  snapshot_tests__blocks__table_of_contents_with_headings.snap  snapshot_tests__blocks__todo_checked.snap  snapshot_tests__blocks__todo_unchecked.snap  snapshot_tests__blocks__toggle_block.snap  snapshot_tests__blocks__unsupported_block.snap  snapshot_tests__blocks__video_block.snap  snapshot_tests__databases__child_database_embedded.snap  snapshot_tests__databases__child_database_not_fetched.snap  snapshot_tests__databases__database_summary_empty.snap  snapshot_tests__databases__database_summary_many_property_types.snap  snapshot_tests__databases__database_summary_simple.snap  (+40 more)
tests/unit/: api_parsing.rs  (+9 more)
(+21 files in other folders)
