[workspace]
members = [".", "crates/notion2prompt-python"]

[package]
name = "notion2prompt"
version = "0.1.0"
edition = "2021"
authors = ["notion2prompt contributors"]
description = "A Rust CLI tool that converts Notion pages and databases into structured prompts for AI models"
license = "MIT"
repository = "https://github.com/sariola/notion2prompt"
homepage = "https://github.com/sariola/notion2prompt"
documentation = "https://docs.rs/notion2prompt"
readme = "README.md"
keywords = ["notion", "cli", "ai", "prompt", "markdown"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "test_*.md",
    "*_test.md", 
    "comprehensive_test.md",
    "full_output.md",
    "new_output*.md",
    "toc_test.md",
    ".env",
    "notion_content.txt",
    "notion_context"
]

[features]
bench = []

[lib]
name = "notion2prompt"
path = "src/lib.rs"

[[bin]]
name = "notion2prompt"
path = "src/main.rs"

[dependencies]
regex = "1.11.1"
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.25"
log4rs = "1.3.0"
anyhow = "1.0.95"
serde_json = "1.0.135"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.5.0"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "blocking", "rustls-tls", "http2"] }
handlebars = "6.3.1"
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
diff = "0.1.12"
uuid = { version = "1.16.0", features = ["v4"] }
lazy_static = "1.5.0"
futures = "0.3.31"
rand = "0.9.0"
indexmap = { version = "2.8.0", features = ["serde"] }
pathdiff = "0.2.3"
once_cell = "1.20.0"
crossbeam = "0.8.4"
num_cpus = "1.16.0"
im = "15.1.0"
im-rc = "15.1.0"
rayon = "1.10.0"
async-trait = "0.1.83"
dashmap = "6.1.0"
memmap2 = "0.9.5"
parking_lot = "0.12.3"
lru = "0.12.5"
notion-client = "1.0.10"

[dev-dependencies]
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.39", features = ["glob"] }

[[bench]]
name = "formatting_bench"
harness = false
required-features = ["bench"]

[[bench]]
name = "api_bench"
harness = false
required-features = ["bench"]
